MODON MRE BPDEV/force-app/main/default/objects/Commission_POT__c/Commission_POT__c.object-meta.xml
<CustomObject>
    <label>Commission POT</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>CPOT #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission POTs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>