MODON MRE BPDEV/force-app/main/default/objects/Commission_POT__c/fields/Broker_Agent__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Commission POTs</relationshipLabel>
    <relationshipName>Commission_POTs</relationshipName>
    <type>Lookup</type>
</CustomField>