MODON MRE BPDEV/force-app/main/default/objects/Commission_POT__c/fields/Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percent__c</fullName>
    <label>Commission Percent %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>