MODON MRE BPDEV/force-app/main/default/objects/Commission_POT__c/fields/On_Hold_Pending_Commission_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Pending_Commission_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>On Hold Pending Commission Reason</label>
    <type>TextArea</type>
</CustomField>