MODON MRE BPDEV/force-app/main/default/objects/Commission_POT__c/fields/POT_Type__c.field-meta.xml
<CustomField>
    <fullName>POT_Type__c</fullName>
    <label>POT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCO</fullName>
            </value>
            <value>
                <fullName>ED</fullName>
            </value>
            <value>
                <fullName>Sales Director</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Associative Director</fullName>
            </value>
            <value>
                <fullName>Sales Associate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>