MODON MRE BPDEV/force-app/main/default/objects/Commission_POT__c/fields/Reporting_To__c.field-meta.xml
<CustomField>
    <fullName>Reporting_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting To</label>
    <referenceTo>Commission_POT__c</referenceTo>
    <relationshipLabel>POT Members</relationshipLabel>
    <relationshipName>Commission_POTs</relationshipName>
    <type>Lookup</type>
</CustomField>