MODON MRE BPDEV/force-app/main/default/objects/Commission_POT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>POT_Type__c</columns>
    <columns>Split_Type__c</columns>
    <columns>User__c</columns>
    <columns>Commission_Percent__c</columns>
    <columns>Reporting_To_Frm__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>