MODON MRE BPDEV/force-app/main/default/objects/Commission_POT__c/listViews/Sales_Associate.listView-meta.xml
<ListView>
    <fullName>Sales_Associate</fullName>
    <columns>NAME</columns>
    <columns>POT_Type__c</columns>
    <columns>Split_Type__c</columns>
    <columns>User__c</columns>
    <columns>Commission_Percent__c</columns>
    <columns>Reporting_To_Frm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>POT_Type__c</field>
        <operation>equals</operation>
        <value>Sales Associate</value>
    </filters>
    <label>Sales Associate</label>
</ListView>